Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10794

lfs quota did not work well for grace time output

XMLWordPrintable

    • 3
    • 9223372036854775807

      Following commit:
      LU-10011 utils: refactor lfs quota codes

      Introduced a regression which will make 'lfs quota -t'
      will output nothing. this should be detected early in the regression
      test, unluckily, there is no test in sanity-quota.sh to detect broken
      function.

            wangshilong Wang Shilong (Inactive)
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: